@@ -350,3 +350,5 @@
 - Implimented new logging system using log {} (if you leave it out it reverts to the old ircd.log)
 - Added Hooks, only one working now is HOOKTYPE_LOCAL_QUIT 
 - Added log flag kline (accidentily forgot it)
+- Added #define HOOKTYPE_LOCAL_NICKCHANGE
+
